fix(CLAV-272): fix z-app-header z-index

--- a/src/components/navigation/z-app-header/styles.css
+++ b/src/components/navigation/z-app-header/styles.css
@@ -101,7 +101,7 @@
   position: fixed;
   top: var(--app-header-top-offset);
   left: 0;
-  z-index: 5;
+  z-index: 20;
   display: flex;
   flex-direction: row;
   width: 100%;
